lib/src/ffi/generated/dart_monty_bindings.dart

// AUTO-GENERATED — do not edit by hand.
// Regenerate with: dart run ffigen

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_monty_core/dart_monty_core_ffi.dart')
library;

import 'dart:ffi' as ffi;

/// Create a new handle from Python source code.
///
/// @param code         NUL-terminated UTF-8 Python source.
/// @param ext_fns      Comma-separated external function names, or NULL.
/// @param script_name  NUL-terminated script name for tracebacks, or NULL
/// for the default ("<input>").
/// @param out_error    On failure, receives a heap-allocated error message.
/// Caller frees with monty_string_free(). May be NULL.
/// @return             Heap-allocated handle, or NULL on error.
@ffi.Native<
  ffi.Pointer<MontyHandle> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<MontyHandle> monty_create(
  ffi.Pointer<ffi.Char> code,
  ffi.Pointer<ffi.Char> ext_fns,
  ffi.Pointer<ffi.Char> script_name,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

/// Free a handle. Safe to call with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<MontyHandle>)>()
external void monty_free(
  ffi.Pointer<MontyHandle> handle,
);

/// Run Python code to completion.
///
/// @param handle       Valid handle from monty_create().
/// @param result_json  Receives heap-allocated JSON result string.
/// Caller frees with monty_string_free(). May be NULL.
/// @param error_msg    Receives heap-allocated error message on failure,
/// or NULL on success. Caller frees with monty_string_free().
/// @return             MONTY_RESULT_OK or MONTY_RESULT_ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_run')
external int _monty_run(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> result_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
);

MontyResultTag monty_run(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> result_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_msg,
) => MontyResultTag.fromValue(
  _monty_run(
    handle,
    result_json,
    error_msg,
  ),
);

/// Start iterative execution. Pauses at external function calls.
///
/// @param handle     Valid handle from monty_create().
/// @param out_error  Receives error message on failure. Caller frees.
/// @return           MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_start')
external int _monty_start(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_start(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_start(
    handle,
    out_error,
  ),
);

/// Resume execution with a return value.
///
/// @param handle      Handle in PENDING state.
/// @param value_json  NUL-terminated JSON value to return to Python.
/// @param out_error   Receives error message on failure. Caller frees.
/// @return            MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume')
external int _monty_resume(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> value_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume(
    handle,
    value_json,
    out_error,
  ),
);

/// Resume execution with an error (raises RuntimeError in Python).
///
/// @param handle         Handle in PENDING state.
/// @param error_message  NUL-terminated error message string.
/// @param out_error      Receives FFI error message on failure. Caller frees.
/// @return               MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_with_error')
external int _monty_resume_with_error(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_with_error(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_with_error(
    handle,
    error_message,
    out_error,
  ),
);

/// Resume execution with a typed Python exception.
///
/// @param handle         Handle in PENDING state.
/// @param exc_type       NUL-terminated Python exception class name
/// (e.g. "FileNotFoundError"). Unknown names fall back
/// to RuntimeError.
/// @param error_message  NUL-terminated error message string.
/// @param out_error      Receives FFI error message on failure. Caller frees.
/// @return               MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_with_exception')
external int _monty_resume_with_exception(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> exc_type,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_with_exception(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> exc_type,
  ffi.Pointer<ffi.Char> error_message,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_with_exception(
    handle,
    exc_type,
    error_message,
    out_error,
  ),
);

/// Resume by creating a future (tells the VM this call returns a future).
/// Only valid when handle is in PENDING state.
///
/// @param handle     Handle in PENDING state.
/// @param out_error  Receives error message on failure. Caller frees.
/// @return           MONTY_PROGRESS_COMPLETE, _PENDING, _RESOLVE_FUTURES,
/// or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_as_future')
external int _monty_resume_as_future(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_as_future(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_as_future(
    handle,
    out_error,
  ),
);

/// Get the pending future call IDs as a JSON array.
/// Only valid after progress returned MONTY_PROGRESS_RESOLVE_FUTURES.
///
/// @return  Heap-allocated JSON array string (e.g. "[0,1,2]"), or NULL.
/// Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_pending_future_call_ids(
  ffi.Pointer<MontyHandle> handle,
);

/// Resume futures with results and errors.
/// Only valid when handle is in RESOLVE_FUTURES state.
///
/// @param handle        Handle in RESOLVE_FUTURES state.
/// @param results_json  JSON object mapping call_id (string) to value,
/// e.g. {"0": "value0", "1": 42}.
/// @param errors_json   JSON object mapping call_id (string) to error message,
/// e.g. {"2": "timeout"}. Use "{}" for no errors.
/// @param out_error     Receives error message on failure. Caller frees.
/// @return              MONTY_PROGRESS_COMPLETE, _RESOLVE_FUTURES, _PENDING,
/// or _ERROR.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.Pointer<MontyHandle>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>(symbol: 'monty_resume_futures')
external int _monty_resume_futures(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> results_json,
  ffi.Pointer<ffi.Char> errors_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

MontyProgressTag monty_resume_futures(
  ffi.Pointer<MontyHandle> handle,
  ffi.Pointer<ffi.Char> results_json,
  ffi.Pointer<ffi.Char> errors_json,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
) => MontyProgressTag.fromValue(
  _monty_resume_futures(
    handle,
    results_json,
    errors_json,
    out_error,
  ),
);

/// Get the pending external function name.
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
///
/// @return  Heap-allocated string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_pending_fn_name(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the pending function arguments as a JSON array.
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
///
/// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_pending_fn_args_json(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the pending function keyword arguments as a JSON object.
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
///
/// @return  Heap-allocated JSON string (e.g. "{}"), or NULL.
/// Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_pending_fn_kwargs_json(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the pending call ID (monotonically increasing per execution).
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
///
/// @return  Call ID, or UINT32_MAX if not in Paused state.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MontyHandle>)>()
external int monty_pending_call_id(
  ffi.Pointer<MontyHandle> handle,
);

/// Whether the pending call is a method call (obj.method() vs func()).
/// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
///
/// @return  1 for method call, 0 for function call, -1 if not in Paused state.
@ffi.Native<ffi.Int Function(ffi.Pointer<MontyHandle>)>()
external int monty_pending_method_call(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the OS function name, e.g. "Path.read_text", "os.getenv".
/// @return  Heap-allocated string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_os_call_fn_name(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the OS call positional arguments as a JSON array string.
/// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_os_call_args_json(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the OS call keyword arguments as a JSON object string.
/// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>()
external ffi.Pointer<ffi.Char> monty_os_call_kwargs_json(
  ffi.Pointer<MontyHandle> handle,
);

/// Get the OS call ID.
/// @return  The call ID, or UINT32_MAX if not in OsCall state.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MontyHandle>)>()
external int monty_os_call_id(
  ffi.Pointer<MontyHandle> handle,
);
